--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Real-Time Chat</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <meta charset="UTF-8" />
+  <title>Real-Time Chat</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+
+    #chat-box {
+      height: calc(100vh - 80px);
+      overflow-y: auto;
+      padding: 10px;
+      background-color: #e5ddd5;
+    }
+
+    .chat-message-wrapper {
+      display: flex;
+      margin-bottom: 10px;
+      align-items: flex-end;
+    }
+
+    .message-bubble {
+      max-width: 70%;
+      padding: 10px 15px;
+      border-radius: 18px;
+      word-wrap: break-word;
+      position: relative;
+    }
+
+    .incoming {
+      flex-direction: row;
+    }
+
+    .incoming .message-bubble {
+      background-color: #ffffff;
+      margin-left: 10px;
+    }
+
+    .outgoing {
+      flex-direction: row-reverse;
+    }
+
+    .outgoing .message-bubble {
+      background-color: #dcf8c6;
+      margin-right: 10px;
+    }
+
+    .sender-info {
+      font-size: 12px;
+      font-weight: 500;
+      margin-bottom: 3px;
+      color: #555;
+    }
+
+    .avatar {
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      background-color: #6c757d;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 16px;
+    }
+
+    #chat-input {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: #f0f0f0;
+      padding: 10px;
+      box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
+    }
+
+    #form input {
+      border-radius: 25px;
+      padding-left: 15px;
+    }
+
+    #form button {
+      border-radius: 50%;
+      width: 45px;
+      height: 45px;
+    }
+  </style>
 </head>
 <body>
-   <div class="container">
-     <ul id="messages"></ul>
-    <form id="form">
-        <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
-   </div>
+  <div class="container-fluid d-flex flex-column">
+    <div id="chat-box" class="d-flex flex-column"></div>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        let name=prompt("enter your name");
-        const socket = io();
-        const form = document.getElementById('form');
-        const input = document.getElementById('input');
-        const messages = document.getElementById('messages');
+    <div id="chat-input">
+      <form id="form" class="d-flex align-items-center">
+        <input id="input" autocomplete="off" class="form-control me-2" placeholder="Type a message..." />
+        <button class="btn btn-success" type="submit">
+          <i class="fas fa-paper-plane"></i>
+        </button>
+      </form>
+    </div>
+  </div>
 
-        form.addEventListener('submit', (e) => {
-            e.preventDefault();
-            if (input.value) {
-                socket.emit('chat message', name+":"+input.value);
-                input.value = '';
-            }
-        });
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const name = prompt("Enter your name:");
+    const socket = io();
+    const form = document.getElementById('form');
+    const input = document.getElementById('input');
+    const chatBox = document.getElementById('chat-box');
 
-        socket.on('chat message', (msg) => {
-            const item = document.createElement('li');
-            item.textContent = msg;
-            messages.appendChild(item);
-            window.scrollTo(0, document.body.scrollHeight);
-        });
-    </script>
+    // Send message
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      const text = input.value.trim();
+      if (text) {
+        const data = { name, message: text };
+        socket.emit('chat message', data);
+        addMessage(data, true);
+        input.value = '';
+      }
+    });
+
+    // Receive message
+    socket.on('chat message', (data) => {
+      if (data.name !== name) {
+        addMessage(data, false);
+      }
+    });
+
+    // Add message to chat
+    function addMessage(data, isSelf) {
+      const wrapper = document.createElement('div');
+      wrapper.className = `chat-message-wrapper ${isSelf ? 'outgoing' : 'incoming'}`;
+
+      // Avatar or Name
+      const avatar = document.createElement('div');
+      avatar.className = 'avatar';
+      avatar.textContent = data.name[0].toUpperCase(); // first letter as avatar
+
+      // Message bubble
+      const bubble = document.createElement('div');
+      bubble.className = 'message-bubble';
+
+      if (!isSelf) {
+        const sender = document.createElement('div');
+        sender.className = 'sender-info';
+        sender.textContent = data.name;
+        bubble.appendChild(sender);
+      }
+
+      const msgText = document.createElement('div');
+      msgText.textContent = data.message;
+      bubble.appendChild(msgText);
+
+      // Combine avatar and bubble
+      if (isSelf) {
+        wrapper.appendChild(bubble);
+        wrapper.appendChild(avatar);
+      } else {
+        wrapper.appendChild(avatar);
+        wrapper.appendChild(bubble);
+      }
+
+      chatBox.appendChild(wrapper);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+  </script>
 </body>
 </html>
