--- a/public/index.html
+++ b/public/index.html
@@ -6,98 +6,81 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-    }
+  body, html {
+    height: 100%;
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #ece5dd;
+  }
 
-    #chat-box {
-      height: calc(100vh - 80px);
-      overflow-y: auto;
-      padding: 10px;
-      background-color: #e5ddd5;
-    }
+  #chat-box {
+    flex: 1;
+    overflow-y: auto;
+    padding: 15px;
+    background-color: #e5ddd5;
+  }
 
-    .chat-message-wrapper {
-      display: flex;
-      margin-bottom: 10px;
-      align-items: flex-end;
-    }
+  .chat-message-wrapper {
+  display: flex;
+  margin-bottom: 10px;
+  align-items: flex-end;
+  position: relative;
+}
 
-    .message-bubble {
-      max-width: 70%;
-      padding: 10px 15px;
-      border-radius: 18px;
-      word-wrap: break-word;
-      position: relative;
-    }
+.avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #6c757d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 16px;
+  z-index: 1;
+  flex-shrink: 0;
+}
 
-    .incoming {
-      flex-direction: row;
-    }
+/* Incoming: Avatar on the left of the bubble */
+.incoming {
+  flex-direction: row;
+}
 
-    .incoming .message-bubble {
-      background-color: #ffffff;
-      margin-left: 10px;
-    }
+.incoming .avatar {
+  margin-right: 8px;
+}
 
-    .outgoing {
-      flex-direction: row-reverse;
-    }
+/* Outgoing: Avatar behind the bubble */
+.outgoing {
+  flex-direction: row-reverse;
+}
 
-    .outgoing .message-bubble {
-      background-color: #dcf8c6;
-      margin-right: 10px;
-    }
+.outgoing .avatar {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  transform: translate(40%, 20%);
+  opacity: 0.4; /* Optional: make it subtle */
+  z-index: 0;
+}
 
-    .sender-info {
-      font-size: 12px;
-      font-weight: 500;
-      margin-bottom: 3px;
-      color: #555;
-    }
+.outgoing .message-bubble {
+  margin-right: 10px;
+  position: relative;
+  z-index: 2;
+}
 
-    .avatar {
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-      background-color: #6c757d;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 16px;
-    }
+</style>
 
-    #chat-input {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background: #f0f0f0;
-      padding: 10px;
-      box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
-    }
-
-    #form input {
-      border-radius: 25px;
-      padding-left: 15px;
-    }
-
-    #form button {
-      border-radius: 50%;
-      width: 45px;
-      height: 45px;
-    }
-  </style>
 </head>
 <body>
-  <div class="container-fluid d-flex flex-column">
-    <div id="chat-box" class="d-flex flex-column"></div>
+  <div class="container-fluid d-flex flex-column p-0" style="height: 100vh;">
+    <div id="chat-box" class="flex-grow-1 d-flex flex-column"></div>
 
     <div id="chat-input">
       <form id="form" class="d-flex align-items-center">
-        <input id="input" autocomplete="off" class="form-control me-2" placeholder="Type a message..." />
-        <button class="btn btn-success" type="submit">
+        <input id="input" autocomplete="off" class="form-control" placeholder="Type a message..." />
+        <button class="btn" type="submit">
           <i class="fas fa-paper-plane"></i>
         </button>
       </form>
@@ -157,13 +140,14 @@
       bubble.appendChild(msgText);
 
       // Combine avatar and bubble
-      if (isSelf) {
-        wrapper.appendChild(bubble);
-        wrapper.appendChild(avatar);
-      } else {
-        wrapper.appendChild(avatar);
-        wrapper.appendChild(bubble);
-      }
+     if (isSelf) {
+  wrapper.appendChild(bubble);
+  wrapper.appendChild(avatar);
+} else {
+  wrapper.appendChild(avatar);
+  wrapper.appendChild(bubble);
+}
+
 
       chatBox.appendChild(wrapper);
       chatBox.scrollTop = chatBox.scrollHeight;
