--- a/public/index.html
+++ b/public/index.html
@@ -2,85 +2,162 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Real-Time Chat</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
-  body, html {
-    height: 100%;
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #ece5dd;
-  }
+    * {
+      box-sizing: border-box;
+    }
 
-  #chat-box {
-    flex: 1;
-    overflow-y: auto;
-    padding: 15px;
-    background-color: #e5ddd5;
-  }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #ece5dd;
+    }
 
-  .chat-message-wrapper {
-  display: flex;
-  margin-bottom: 10px;
-  align-items: flex-end;
-  position: relative;
-}
+    .chat-container {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
 
-.avatar {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  background-color: #6c757d;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 16px;
-  z-index: 1;
-  flex-shrink: 0;
-}
+    #chat-box {
+      flex-grow: 1;
+      overflow-y: auto;
+      padding: 15px;
+      background-color: #e5ddd5;
+    }
 
-/* Incoming: Avatar on the left of the bubble */
-.incoming {
-  flex-direction: row;
-}
+    .chat-message-wrapper {
+      display: flex;
+      margin-bottom: 12px;
+      align-items: flex-end;
+      position: relative;
+    }
 
-.incoming .avatar {
-  margin-right: 8px;
-}
+    .message-bubble {
+      max-width: 75%;
+      padding: 10px 14px;
+      border-radius: 18px;
+      font-size: 15px;
+      line-height: 1.4;
+      position: relative;
+      word-wrap: break-word;
+    }
 
-/* Outgoing: Avatar behind the bubble */
-.outgoing {
-  flex-direction: row-reverse;
-}
+    .incoming {
+      flex-direction: row;
+    }
 
-.outgoing .avatar {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  transform: translate(40%, 20%);
-  opacity: 0.4; /* Optional: make it subtle */
-  z-index: 0;
-}
+    .incoming .message-bubble {
+      background-color: #ffffff;
+      margin-left: 8px;
+      border-bottom-left-radius: 0;
+    }
 
-.outgoing .message-bubble {
-  margin-right: 10px;
-  position: relative;
-  z-index: 2;
-}
+    .incoming .avatar {
+      margin-right: 6px;
+    }
 
-</style>
+    .outgoing {
+      flex-direction: row-reverse;
+    }
 
+    .outgoing .message-bubble {
+      background-color: #dcf8c6;
+      margin-right: 10px;
+      position: relative;
+      z-index: 2;
+      border-bottom-right-radius: 0;
+    }
+
+    .outgoing .avatar {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      transform: translate(40%, 20%);
+      opacity: 0.4;
+      z-index: 1;
+    }
+
+    .avatar {
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      background-color: #6c757d;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 16px;
+      flex-shrink: 0;
+    }
+
+    .sender-info {
+      font-size: 12px;
+      font-weight: 600;
+      margin-bottom: 4px;
+      color: #075e54;
+    }
+
+    #chat-input {
+      background: #f0f0f0;
+      padding: 10px;
+      position: sticky;
+      bottom: 0;
+      z-index: 100;
+      box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    #form {
+      display: flex;
+      gap: 8px;
+    }
+
+    #form input {
+      border-radius: 25px;
+      padding: 10px 15px;
+      border: none;
+      flex: 1;
+      height: 45px;
+    }
+
+    #form input:focus {
+      outline: none;
+      box-shadow: none;
+    }
+
+    #form button {
+      border-radius: 50%;
+      width: 45px;
+      height: 45px;
+      background-color: #25d366;
+      color: white;
+      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* Make bubbles wider on small devices */
+    @media (max-width: 600px) {
+      .message-bubble {
+        max-width: 85%;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="container-fluid d-flex flex-column p-0" style="height: 100vh;">
-    <div id="chat-box" class="flex-grow-1 d-flex flex-column"></div>
+  <div class="chat-container">
+    <div id="chat-box" class="d-flex flex-column"></div>
 
     <div id="chat-input">
-      <form id="form" class="d-flex align-items-center">
-        <input id="input" autocomplete="off" class="form-control" placeholder="Type a message..." />
-        <button class="btn" type="submit">
+      <form id="form">
+        <input id="input" autocomplete="off" placeholder="Type a message..." />
+        <button type="submit">
           <i class="fas fa-paper-plane"></i>
         </button>
       </form>
@@ -119,12 +196,10 @@
       const wrapper = document.createElement('div');
       wrapper.className = `chat-message-wrapper ${isSelf ? 'outgoing' : 'incoming'}`;
 
-      // Avatar or Name
       const avatar = document.createElement('div');
       avatar.className = 'avatar';
-      avatar.textContent = data.name[0].toUpperCase(); // first letter as avatar
+      avatar.textContent = data.name[0].toUpperCase();
 
-      // Message bubble
       const bubble = document.createElement('div');
       bubble.className = 'message-bubble';
 
@@ -139,15 +214,13 @@
       msgText.textContent = data.message;
       bubble.appendChild(msgText);
 
-      // Combine avatar and bubble
-     if (isSelf) {
-  wrapper.appendChild(bubble);
-  wrapper.appendChild(avatar);
-} else {
-  wrapper.appendChild(avatar);
-  wrapper.appendChild(bubble);
-}
-
+      if (isSelf) {
+        wrapper.appendChild(bubble);
+        wrapper.appendChild(avatar);
+      } else {
+        wrapper.appendChild(avatar);
+        wrapper.appendChild(bubble);
+      }
 
       chatBox.appendChild(wrapper);
       chatBox.scrollTop = chatBox.scrollHeight;
